Refactor tools UI to use centralized components and update styles

--- a/index.html
+++ b/index.html
@@ -1,12 +1,34 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Halo - Marketing Concepts</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Wake Transmission — Audio-Reactive Visualizer</title>
+  <meta name="description"
+    content="An immersive, audio-reactive visualizer experience built with React and Three.js. Explore real-time frequency analysis and stunning 3D scenes synchronized to music." />
+  <meta name="keywords"
+    content="Wake Transmission, Audio Visualizer, React, Three.js, WebGL, Real-time Audio, Music Visualization, Corey Burns" />
+  <meta name="author" content="Corey Burns" />
+  <meta name="robots" content="index, follow" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Wake Transmission — Audio-Reactive Visualizer" />
+  <meta property="og:description"
+    content="An immersive, audio-reactive visualizer experience. Explore real-time frequency analysis and stunning 3D scenes synchronized to music." />
+  <meta property="og:image" content="/og-image.png" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Wake Transmission — Audio-Reactive Visualizer" />
+  <meta name="twitter:description"
+    content="An immersive, audio-reactive visualizer experience. Explore real-time frequency analysis and stunning 3D scenes synchronized to music." />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
