chore: move static assets to public, add SEO meta tags, add _redirects, update sitemap lastmod

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Wake Transmission — Audio-Reactive Visualizer</title>
+  <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
+  <link rel="apple-touch-icon" href="/favicon.svg" />
+  <link rel="canonical" href="https://waking.coreyburns.ca/" />
+  <meta name="theme-color" content="#0ea5a4" />
   <meta name="description"
     content="An immersive, audio-reactive visualizer experience built with React and Three.js. Explore real-time frequency analysis and stunning 3D scenes synchronized to music." />
   <meta name="keywords"
@@ -14,16 +18,18 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://waking.coreyburns.ca/" />
   <meta property="og:title" content="Wake Transmission — Audio-Reactive Visualizer" />
   <meta property="og:description"
     content="An immersive, audio-reactive visualizer experience. Explore real-time frequency analysis and stunning 3D scenes synchronized to music." />
-  <meta property="og:image" content="/og-image.png" />
+  <meta property="og:image" content="/og-image.svg" />
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Wake Transmission — Audio-Reactive Visualizer" />
   <meta name="twitter:description"
     content="An immersive, audio-reactive visualizer experience. Explore real-time frequency analysis and stunning 3D scenes synchronized to music." />
+  <meta name="twitter:image" content="/og-image.svg" />
 </head>
 
 <body>
