--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Wake Transmission — Audio-Reactive Visualizer</title>
   <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
-  <link rel="apple-touch-icon" href="/favicon.svg" />
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
   <link rel="canonical" href="https://waking.coreyburns.ca/" />
   <meta name="theme-color" content="#0ea5a4" />
   <meta name="description"
@@ -22,14 +22,14 @@
   <meta property="og:title" content="Wake Transmission — Audio-Reactive Visualizer" />
   <meta property="og:description"
     content="An immersive, audio-reactive visualizer experience. Explore real-time frequency analysis and stunning 3D scenes synchronized to music." />
-  <meta property="og:image" content="/og-image.svg" />
+  <meta property="og:image" content="/og-image.png" />
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Wake Transmission — Audio-Reactive Visualizer" />
   <meta name="twitter:description"
     content="An immersive, audio-reactive visualizer experience. Explore real-time frequency analysis and stunning 3D scenes synchronized to music." />
-  <meta name="twitter:image" content="/og-image.svg" />
+  <meta name="twitter:image" content="/og-image.png" />
 </head>
 
 <body>
